# ECUPWN_APP

./: CMakeLists.txt  ECUPWN_APP_en_GB.ts  codes.json
candy/src/: candy.cpp  candy.h
src/: ConnectionManager.h  File.cpp  File.h  State.cpp  State.h  canlogger.cpp  canlogger.h  canworker.cpp  canworker.h  codelookup.cpp  codelookup.h  connectionsettings.cpp  connectionsettings.h  existingconnection.cpp  existingconnection.h  lookup.cpp  lookup.hpp  main.cpp  splash.cpp  splash.h  udp_listener.cpp  udp_listener.h
src/CAN/: CanQueue.cpp  CanQueue.h  ConnectionManager.cpp  ConnectionManager.h  canworker.cpp  canworker.h
src/utils/: canlogger.cpp  canlogger.h  codelookup.cpp
ui/: canlogger.ui  codelookup.ui  connectionsettings.ui  existingconnection.ui  splash.ui
